<resources>
    <string name="app_name">BankuishChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_text">Language:</string>
    <string name="visibility_text">Visibility:</string>
    <string name="date_updated_text">Date updated:</string>
    <string name="date_created_text">Date created:</string>
    <string name="url_text">Url:</string>
    <string name="description_text">Description:</string>
</resources>